--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 style="text-align:center; background:dodgerblue; color:floralwhite; font-family: 'Roboto', sans-serif; font-size: 2em">Bem-vindo(a) a minha página</h1>
     <p style="text-align:center; font-family: 'Roboto', sans-serif; font-size: 1,5em"> Olá! Eu sou Isabela, eu sou Front End.</p>
-    <h4 style="text-align: center; font-family: 'Roboto', sans-serif; font-size: 0,5em"> Clique na foto para ter acesso o meu Currículo WEB</h4>
+    <h4 style="text-align: center; font-family: 'Roboto', sans-serif; font-size: 0,5em"> Clique na foto para ter acesso ao meu Currículo WEB</h4>
     <center>
         <a href="https://www.curriculoisabela.interatisa.com.br" target="_blank">
         <img src="imagem/isabela.jpg"> 
